--- a/NaviTag/Views/Storyboards/Base.lproj/Main.storyboard
+++ b/NaviTag/Views/Storyboards/Base.lproj/Main.storyboard
@@ -153,8 +153,11 @@
                                         <constraints>
                                             <constraint firstAttribute="height" constant="28" id="ZS9-NI-O47"/>
                                         </constraints>
-                                        <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="filled" title="Save Place">
+                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                        <color key="tintColor" red="0.93626517060000003" green="0.91481006149999999" blue="0.83525818590000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                        <state key="normal" title="Save Place"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="Save Place">
                                             <fontDescription key="titleFontDescription" type="system" pointSize="13"/>
                                         </buttonConfiguration>
                                     </button>
@@ -172,9 +175,10 @@
                                 </constraints>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zYJ-JE-uQd">
-                                <rect key="frame" x="330" y="718" width="47" height="35"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="filled" title="📍"/>
+                                <rect key="frame" x="330" y="718.66666666666663" width="47" height="34.333333333333371"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title="📍"/>
+                                <buttonConfiguration key="configuration" style="plain" title="📍"/>
                                 <connections>
                                     <action selector="goToCurrentLocation:" destination="UJq-7k-rNw" eventType="touchUpInside" id="ubp-hL-Ds5"/>
                                 </connections>
@@ -219,7 +223,6 @@
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="ycP-cP-D5U">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
                         <segue destination="6zX-fA-ci4" kind="relationship" relationship="viewControllers" id="wP1-fx-jwD"/>
