--- a/NaviTag/Views/Storyboards/Base.lproj/Main.storyboard
+++ b/NaviTag/Views/Storyboards/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
         <capability name="Map view configurations" minToolsVersion="14.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -175,60 +176,60 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="WXi-b1-FmM">
-                                <rect key="frame" x="0.0" y="103" width="393" height="666"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="UCu-rm-Csv">
+                                <rect key="frame" x="16" y="114" width="361" height="655"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CategoryCell" id="wF6-xm-k79" customClass="CategoryCell" customModule="NaviTag" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="50" width="393" height="32.666667938232422"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="wF6-xm-k79" id="RqZ-pv-m3D">
-                                            <rect key="frame" x="0.0" y="0.0" width="393" height="32.666667938232422"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="hGX-VE-Cti">
+                                    <size key="itemSize" width="128" height="128"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CategoryCell" id="rET-tu-PLj">
+                                        <rect key="frame" x="0.0" y="0.0" width="128" height="129"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="vnA-oJ-55S">
+                                            <rect key="frame" x="0.0" y="0.0" width="128" height="129"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Museums" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4S8-C6-Inf">
-                                                    <rect key="frame" x="37" y="6" width="319" height="30"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="width" constant="319" id="7JX-gL-BiB"/>
-                                                    </constraints>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Museums" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hnx-7T-hAd">
+                                                    <rect key="frame" x="27" y="54" width="74" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="4S8-C6-Inf" firstAttribute="centerX" secondItem="RqZ-pv-m3D" secondAttribute="centerX" id="YVi-C8-EnH"/>
-                                                <constraint firstItem="4S8-C6-Inf" firstAttribute="centerY" secondItem="RqZ-pv-m3D" secondAttribute="centerY" id="lje-Jh-FiD"/>
-                                                <constraint firstItem="4S8-C6-Inf" firstAttribute="top" secondItem="RqZ-pv-m3D" secondAttribute="topMargin" constant="-5" id="oVL-Of-8lK"/>
+                                                <constraint firstItem="hnx-7T-hAd" firstAttribute="centerX" secondItem="vnA-oJ-55S" secondAttribute="centerX" id="6f1-Gw-rY1"/>
+                                                <constraint firstItem="hnx-7T-hAd" firstAttribute="centerY" secondItem="vnA-oJ-55S" secondAttribute="centerY" id="72U-IW-eBR"/>
+                                                <constraint firstItem="hnx-7T-hAd" firstAttribute="top" secondItem="vnA-oJ-55S" secondAttribute="top" constant="54" id="mmf-Zu-GHt"/>
                                             </constraints>
-                                        </tableViewCellContentView>
-                                        <connections>
-                                            <outlet property="categoryLabel" destination="4S8-C6-Inf" id="uW5-lZ-mr1"/>
-                                        </connections>
-                                    </tableViewCell>
-                                </prototypes>
-                            </tableView>
+                                        </collectionViewCellContentView>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="IzO-xc-c7g"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="WXi-b1-FmM" firstAttribute="bottom" secondItem="IzO-xc-c7g" secondAttribute="bottom" id="Dlz-3l-eIA"/>
-                            <constraint firstItem="WXi-b1-FmM" firstAttribute="top" secondItem="IzO-xc-c7g" secondAttribute="top" id="fpk-Nz-7C0"/>
-                            <constraint firstItem="WXi-b1-FmM" firstAttribute="leading" secondItem="mKq-0b-YsE" secondAttribute="leading" id="snJ-gm-jzK"/>
-                            <constraint firstAttribute="trailing" secondItem="WXi-b1-FmM" secondAttribute="trailing" id="xTT-nb-wMH"/>
+                            <constraint firstItem="UCu-rm-Csv" firstAttribute="trailing" secondItem="mKq-0b-YsE" secondAttribute="trailingMargin" id="OBO-TH-Nqg"/>
+                            <constraint firstItem="UCu-rm-Csv" firstAttribute="bottom" secondItem="IzO-xc-c7g" secondAttribute="bottom" id="SJf-au-vcr"/>
+                            <constraint firstItem="UCu-rm-Csv" firstAttribute="leading" secondItem="mKq-0b-YsE" secondAttribute="leadingMargin" id="psF-zC-6x4"/>
+                            <constraint firstItem="UCu-rm-Csv" firstAttribute="top" secondItem="IzO-xc-c7g" secondAttribute="top" constant="11" id="xqP-w3-nV7"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Favorites" id="Ni2-Ew-PXy">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="xP8-cW-H5m"/>
                     </navigationItem>
                     <connections>
-                        <outlet property="tableView" destination="WXi-b1-FmM" id="UuN-5c-JZN"/>
+                        <outlet property="collectionView" destination="UCu-rm-Csv" id="mSS-8a-d8e"/>
                         <segue destination="wup-cB-13M" kind="push" id="wXI-t5-lbi"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="p8K-Cz-Xgp" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-680" y="-299"/>
+            <point key="canvasLocation" x="-680.15267175572512" y="-299.29577464788736"/>
         </scene>
         <!--Places View Controller-->
         <scene sceneID="1Zh-rZ-C2L">
@@ -238,38 +239,52 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="e7Z-Lj-2gi">
-                                <rect key="frame" x="0.0" y="97" width="393" height="672"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="IPr-8V-i8h">
+                                <rect key="frame" x="16" y="114" width="361" height="655"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="PlaceCell" id="fg9-ZY-uZH">
-                                        <rect key="frame" x="0.0" y="50" width="393" height="43.666667938232422"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="fg9-ZY-uZH" id="0ey-MC-wj5">
-                                            <rect key="frame" x="0.0" y="0.0" width="393" height="43.666667938232422"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                </prototypes>
-                            </tableView>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Nsa-gp-tbJ">
+                                    <size key="itemSize" width="128" height="128"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PlaceCell" id="2kj-gS-MEn">
+                                        <rect key="frame" x="0.0" y="0.0" width="128" height="129"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="hur-tE-dOL">
+                                            <rect key="frame" x="0.0" y="0.0" width="128" height="129"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Archeology Museum" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OrB-gs-Q3o">
+                                                    <rect key="frame" x="-14.666666666666671" y="54" width="157.33333333333337" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="OrB-gs-Q3o" firstAttribute="centerY" secondItem="hur-tE-dOL" secondAttribute="centerY" id="Ace-ig-JD2"/>
+                                                <constraint firstItem="OrB-gs-Q3o" firstAttribute="centerX" secondItem="hur-tE-dOL" secondAttribute="centerX" id="LOC-CU-HeU"/>
+                                                <constraint firstItem="OrB-gs-Q3o" firstAttribute="top" secondItem="hur-tE-dOL" secondAttribute="top" constant="54" id="wHV-g5-76o"/>
+                                            </constraints>
+                                        </collectionViewCellContentView>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="GLk-hX-lu3"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <constraints>
-                            <constraint firstItem="e7Z-Lj-2gi" firstAttribute="top" secondItem="Je1-Uz-57r" secondAttribute="topMargin" constant="-6" id="CD2-GK-kg8"/>
-                            <constraint firstItem="e7Z-Lj-2gi" firstAttribute="centerX" secondItem="Je1-Uz-57r" secondAttribute="centerX" id="N5t-VN-tYI"/>
-                            <constraint firstItem="e7Z-Lj-2gi" firstAttribute="leading" secondItem="GLk-hX-lu3" secondAttribute="leading" id="PSh-Yq-dSR"/>
-                            <constraint firstItem="e7Z-Lj-2gi" firstAttribute="bottom" secondItem="GLk-hX-lu3" secondAttribute="bottom" id="yCc-m0-EHd"/>
-                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="7v9-cC-poN"/>
                     <connections>
-                        <outlet property="tableView" destination="e7Z-Lj-2gi" id="nM3-3C-ipe"/>
+                        <outlet property="collectionView" destination="IPr-8V-i8h" id="Sja-dc-T7y"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="98q-rF-yjm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="124" y="-299"/>
+            <point key="canvasLocation" x="122.90076335877862" y="-299.29577464788736"/>
         </scene>
     </scenes>
     <resources>
