--- a/NaviTag/Views/Storyboards/Base.lproj/Main.storyboard
+++ b/NaviTag/Views/Storyboards/Base.lproj/Main.storyboard
@@ -58,6 +58,9 @@
                                         <buttonConfiguration key="configuration" style="plain" title="Get directions">
                                             <fontDescription key="titleFontDescription" type="system" pointSize="14"/>
                                         </buttonConfiguration>
+                                        <connections>
+                                            <action selector="getDirectionsTapped:" destination="UJq-7k-rNw" eventType="touchUpInside" id="PnJ-r2-6kG"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
